# AI-Safe-Plugin

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  README.md  package-lock.json  package.json  playwright.config.js  pyproject.toml
.github/workflows/: release.yml
docs/: CONTRIBUTING.md  DEVELOPMENT.md  FEATURES.md  PRIVACY_POLICY.md  PRIVACY_POLICY_DRAFT.md  RELEASING.md  SECURITY.md  architecture.drawio  hardening-and-ux-plan.md  windows-installer-plan.md
docs/ISSUE_TEMPLATE/: bug_report.md
extension/: background.js  content.js  manifest.json  options.css  options.html  pattern_catalog.js  playground.html  playground.js  popup.css  popup.html  popup.js  styles.css
packaging/windows/: AISafePluginSetup.iss
scripts/: build_backend_bundle.py  build_crx.sh  build_model_bundle.py  build_windows_installer.py
scripts/installers/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
server/: gliner2_server.py  native_host.py
server/autostart/: install_linux.sh  install_mac.sh  install_windows.bat  uninstall_linux.sh  uninstall_mac.sh  uninstall_windows.bat
server/native-host/: install_linux.sh  install_mac.sh  install_windows.bat  native_host_unix.sh  uninstall_linux.sh  uninstall_mac.sh  uninstall_windows.bat
tests/e2e/: detection.spec.js  fixtures.js  mock_server.js  popup.spec.js
tests/fixtures/: regex_smoke_demo.html
tests/js/: test_background_utils.js
tests/server/: test_build_backend_bundle.py  test_http_handler.py  test_native_host.py  test_unix_installer.py  test_utils.py  test_windows_installer.py  test_windows_setup_packaging.py
