[project]
name = "ai-safe-plugin-local-runtime"
version = "1.2.8"
description = "Local runtime and native-host support for the AI-Safe Plugin browser extension."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "gliner2-onnx>=0.1.1,<0.2",
  "python-dotenv>=1.0,<2",
]

[dependency-groups]
dev = [
  "pytest>=9.0.3,<10",
]

[tool.uv]
package = false
